# verse-translator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  glossary.txt  lefthook.yml  pyproject.toml  verse-translator.example.toml
.github/workflows/: ci.yml
tests/: test_batcher.py  test_cache.py  test_lmstudio.py  test_models.py  test_parser.py  test_pipeline.py
translator/: __init__.py  __main__.py  batcher.py  cache.py  config.py  models.py  parser.py  pipeline.py  project_config.py  versioning.py
translator/backends/: __init__.py  base.py  claude_cli.py  cli_base.py  codex_cli.py  gemini_cli.py  lmstudio.py  ollama.py
